<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>homework</name>
  <version>0.0.0</version>
  <description>First Homework for ME696 Fall 2023</description>
  <maintainer email="png@hawaii.edu">Patrick Ng</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>turtlesim</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
